# supplier

./: .gitignore  DESIGN.md  request.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  main.py
frontend/: package-lock.json
