[project]
name = "supplier-backend"
version = "0.1.0"
description = "供应商与合同管理系统 - 后端"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.20",
    "pyjwt>=2.10.0",
    "anthropic>=0.40.0",
    "pdfplumber>=0.11.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "boto3>=1.35.0",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
